[project]
name = "rest_parser"
version = "0.1.0"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.2",
  "pydantic==2.10.4",
  "requests==2.32.3",
  "aiohttp==3.11.11",
  "beautifulsoup4==4.12.3",
  "lxml==5.3.0",
  "selenium==4.27.1",
  "undetected-chromedriver==3.5.5",
  "setuptools>=65.5.0",
  "playwright==1.48.0",
  "googletrans==4.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-benchmark",
  "pytest-asyncio",
  "pytest-cov",
  "mock",
  "responses",
  "psutil"
]
